# Underwater_Navigation_Strategies

./: README.md
depth_ctrl_update/: CMakeLists.txt  package.xml
depth_ctrl_update/include/depth_ctrl_update/: depth_ctrl_update.h
depth_ctrl_update/launch/: depth_ctrl_update.launch  mn4_depth_ctrl_update.launch
depth_ctrl_update/src/: depth_ctrl_update.cpp
docs/: GPS-buoy_doc.odt  hovering_node-doc.odt  launch_guide-doc.odt  pinger_sonar_node-doc.odt  point-and-shoot_doc.odt  sst_sensor_ring-doc.odt  vegetation-boundary-detection_launch-doc.odt
gps_buoy/: CMakeLists.txt  package.xml
gps_buoy/launch/: gps_buoy_node.launch
gps_buoy/src/: gps_buoy_node.cpp
gps_buoy_restart/: CMakeLists.txt  package.xml
gps_buoy_restart/launch/: gps_buoy_node.launch
gps_buoy_restart/src/: gps_buoy_node.cpp
gps_navigation_update/: CMakeLists.txt  package.xml
gps_navigation_wp_pub/: CMakeLists.txt  package.xml
gps_waypoints/: Transect1-01_wp20.yaml  gps-waypoints-transect-1_3-0-1_to_4m.yaml  gps-waypoints-transect-1_UMG-to-end.yaml  gps-waypoints_transect-1_2-0-1-to-2m.yaml  gps_waypoints_meander-1_transect-1.yaml  gps_waypoints_shore_Prof_Maehle_boat.yaml  gps_waypoints_shore_all_boats.yaml  gps_waypoints_transect_1.yaml  transect-1_2m-to-2_0_1.yaml  transect-1_UMG-to-2m.yaml
heading_ctrl_no_timeout/: CMakeLists.txt  package.xml
heading_ctrl_update/: CMakeLists.txt  package.xml
heading_ctrl_update/include/heading_ctrl_update/: heading_ctrl_update.h
heading_ctrl_update/launch/: heading_ctrl_update.launch
heading_ctrl_update/src/: heading_ctrl_update.cpp
heading_ctrl_update_new/: CMakeLists.txt  package.xml
heading_ctrl_update_new/include/heading_ctrl_update_new/: heading_ctrl_update_new.h
heading_ctrl_update_new/launch/: heading_ctrl_update_new.launch  heading_ctrl_update_new_gps_navigation.launch  heading_ctrl_update_new_hovering.launch  mn4_heading_ctrl.launch
heading_ctrl_update_new/src/: heading_ctrl_update_new.cpp
hovering/: CMakeLists.txt  README.md  package.xml
hovering/launch/: hovering_node.launch  pinger_driver.sh
hovering/src/: hovering_node.cpp
hovering_update/: CMakeLists.txt  package.xml
mn_launch_launch_files_copy/: 180718-gps-follow-mn1.launch  180718-gps-follow-mn2.launch  180718-gps-follow-mn3.launch  180821-multibeam-dive-mn4.launch  181029-gps-follow-mn1.launch  181029-gps-follow-mn2.launch  181109-ahoi-follow-mn1.launch  181109-ahoi-follow-mn2.launch  181109-ahoi-follow-mn3.launch  190702-mn1-modem-test.launch  190702-mn2-modem-test.launch  190702-mn3-modem-test.launch  190925-mn1-ahoi-base.launch  190925-mn1-ahoi-formation.launch  190925-mn2-ahoi-base.launch  190925-mn2-ahoi-formation.launch  190925-mn3-ahoi-base.launch  190925-mn3-ahoi-formation.launch  191024-mn5-test.launch  200615-mn4-gui.launch  heading_ctrl_gps_navigation.launch  heading_ctrl_hovering.launch  heading_ctrl_update_new_gps_navigation.launch  heading_ctrl_update_new_hovering.launch  mn1-base.launch  mn1-drivers.launch  mn2-base.launch  mn2-drivers.launch  mn3-base.launch  mn3-behavior-gps_buoy-depth_ctrl_only-transect-1_2-0-1-to-2m.launch  mn3-behavior-gps_buoy-shore_boat.launch  mn3-behavior-gps_buoy-transect-1_2-0-1_to_2m.launch  mn3-behavior-gps_buoy-transect-1_3-0-1_to_4m.launch  mn3-behavior-gps_buoy-transect-1_UMG-to-end.launch  mn3-behavior-gps_buoy.launch  mn3-behavior-gps_buoy_restart-transect-1_UMG-to-2m-heading_ctrl_no_timeout.launch  mn3-behavior-gps_navigation-heading_ctrl_update_new.launch  mn3-behavior-gps_navigation.launch  mn3-behavior-hovering-heading_ctrl_update_new.launch  mn3-behavior-hovering.launch  (+20 more)
monsun_comm_update/: CMakeLists.txt  README.md  package.xml
monsun_comm_update/cmake/: FindZeroMQ.cmake
monsun_comm_update/include/monsun_comm/: buffer_receive.h  buffer_send.h  message_types.h  portdef.h  publisher.h  subscriber.h
monsun_comm_update/launch/: listen-mn1.launch  listen-mn2.launch  listen-mn3.launch  listen-mn5.launch  localhost.launch  publish-mn2.launch
monsun_comm_update/src/: multiplexer.cpp  publisher.cpp  subscriber.cpp  test_mp.cpp
ms5837_pressure_sensor/: CMakeLists.txt  package.xml
ms5837_pressure_sensor/launch/: ms5837_pressure_sensor_node.launch
ms5837_pressure_sensor/src/: ms5837_pressure_sensor_node.py
pinger_driver/: README.md  pinger_driver_distance_simple_launch.sh  pinger_driver_launch.sh
pinger_sonar/: CMakeLists.txt  package.xml
point_and_shoot/: CMakeLists.txt  package.xml
point_and_shoot_hovering/: CMakeLists.txt  package.xml
point_and_shoot_hovering_update/: CMakeLists.txt  package.xml
point_and_shoot_hovering_update/include/point_and_shoot_hovering_update/: point_and_shoot_hovering_update.h
point_and_shoot_hovering_update/launch/: point_and_shoot_hovering_update_node.launch
point_and_shoot_hovering_update/src/: point_and_shoot_hovering_update.cpp  point_and_shoot_hovering_update_node.cpp
point_and_shoot_surface/: CMakeLists.txt  package.xml
point_and_shoot_surface_calculate_shoot/: CMakeLists.txt  package.xml
pump_module/: CMakeLists.txt  package.xml
pump_module/include/pump_module/: i2c_device.h  pump_module.h
pump_module/launch/: pump_module.launch
pump_module/src/: i2c_device.cpp  pump_module.cpp  pump_module_node.cpp
pump_module_behavior/: CMakeLists.txt  package.xml
pump_module_behavior/launch/: pump_module_behavior.launch
pump_module_behavior/src/: pump_module_behavior.cpp
socket_server_receive/: CMakeLists.txt  package.xml  vb_detection_timer.py
socket_server_receive/launch/: socket_server_receive.launch
socket_server_receive/src/: socket_server_receive_node.cpp
sst_sensor_ring/: CMakeLists.txt  package.xml  sst_sensor_ring_rosrun.sh
sst_sensor_ring/launch/: sst_sensor_ring_node.launch
sst_sensor_ring/msg/: SSTSensorRing.msg
sst_sensor_ring/src/: sst_sensor_ring_node.py
vegetation_boundary_message/: CMakeLists.txt  package.xml
vegetation_boundary_message/msg/: VegetationBoundary.msg
wifi_follower/: CMakeLists.txt  package.xml
wifi_follower/launch/: wifi_follower_node.launch
wifi_follower/src/: wifi_follower.cpp
(+36 files in other folders)
