<?xml version="1.0"?>
<package format="2">
    <name>gps_buoy_restart</name>
    <version>0.1.0</version>
    <description>GPS buoy restart package</description>
    <maintainer email="kapoor@iti.uni-luebeck.de">Gaurav Kapoor</maintainer>
    <license>BSD</license>
    <author email="kapoor@iti.uni-luebeck.de">Gaurav Kapoor</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>geometry_msgs</depend>
    <depend>monsun_msgs</depend>
    <export></export>
</package>
