<?xml version="1.0"?>
<package format="2">
    <name>sst_sensor_ring</name>
    <version>0.1.0</version>
    <description>SST sensor ring driver</description>
    <maintainer email="kapoor@iti.uni-luebeck.de">Gaurav Kapoor</maintainer>
    <license>BSD</license>
    <author email="kapoor@iti.uni-luebeck.de">Gaurav Kapoor</author>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <export></export>
</package>
